:sparkles: feat: configure operationId routes for the api schema
