# src/http/routes/get-profile.route.ts
@@ -9,6 +9,7 @@ export const getProfile: FastifyPluginAsyncZod = async (app) => {
 			schema: {
 				tags: ['auth'],
 				description: 'Get authenticated user profile',
+				operationId: 'getProfile',
 				response: {
 					200: z.object({
 						profile: z.object({
