# src/http/routes/get-user-experience-and-level.route.ts
@@ -11,6 +11,7 @@ export const getUserExperienceAndLevelRoute: FastifyPluginAsyncZod = async (app)
 			schema: {
 				tags: ['users', 'gamification'],
 				description: 'Get user experience and level',
+				operationId: 'getUserExperienceAndLevel',
 				response: {
 					200: z.object({
 						experience: z.number(),
