# swagger.json
@@ -10,6 +10,7 @@
   "paths": {
     "/goals": {
       "post": {
+        "operationId": "createGoal",
         "tags": [
           "goals"
         ],
@@ -58,6 +59,7 @@
     },
     "/goal-completions": {
       "post": {
+        "operationId": "createGoalCompletion",
         "tags": [
           "goals"
         ],
@@ -100,6 +102,7 @@
     },
     "/pending-goals": {
       "get": {
+        "operationId": "getPendingGoals",
         "tags": [
           "goals"
         ],
@@ -153,10 +156,21 @@
     },
     "/summary": {
       "get": {
+        "operationId": "getWeekSummary",
         "tags": [
           "goals"
         ],
         "description": "Get week summary",
+        "parameters": [
+          {
+            "schema": {
+              "default": "2026-02-01T03:00:00.000Z"
+            },
+            "in": "query",
+            "name": "weekStartAt",
+            "required": false
+          }
+        ],
         "responses": {
           "200": {
             "description": "Default Response",
@@ -222,6 +236,7 @@
     },
     "/auth/github": {
       "post": {
+        "operationId": "authenticateFromGithub",
         "tags": [
           "auth"
         ],
@@ -269,6 +284,7 @@
     },
     "/profile": {
       "get": {
+        "operationId": "getProfile",
         "tags": [
           "auth"
         ],
@@ -313,6 +329,45 @@
                   },
                   "required": [
                     "profile"
+                  ],
+                  "additionalProperties": false
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/profile/gamification": {
+      "get": {
+        "operationId": "getUserExperienceAndLevel",
+        "tags": [
+          "users",
+          "gamification"
+        ],
+        "description": "Get user experience and level",
+        "responses": {
+          "200": {
+            "description": "Default Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "experience": {
+                      "type": "number"
+                    },
+                    "level": {
+                      "type": "number"
+                    },
+                    "experienceToNextLevel": {
+                      "type": "number"
+                    }
+                  },
+                  "required": [
+                    "experience",
+                    "level",
+                    "experienceToNextLevel"
                   ],
                   "additionalProperties": false
                 }
